# agent-orchestrator

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODING_GUIDE.md  CODING_GUIDE_JS.md  CODING_GUIDE_PYTHON.md  CODING_GUIDE_TS.md  Dockerfile  GETTING_STARTED.md  PROGRESS.md  SDK.md  _setup_packages.py  docker-compose.yml  pyproject.toml
studio/: Dockerfile  PROGRESS.md  docker-compose.yml  pyproject.toml
studio/docs/: ARCHITECTURE.md  INSTALL.md  USER_GUIDE.md
studio/docs/user-guide/: _quarto.yml  index.qmd
studio/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
studio/frontend/src/: App.tsx  main.tsx  types.ts
studio/profiles/content-moderation/: agents.yaml  governance.yaml  workflow.yaml  workitems.yaml
studio/studio/: __init__.py  app.py  cli.py  config.py  exceptions.py
studio/studio/conditions/: __init__.py  builder.py
studio/studio/connectors/: __init__.py  discovery.py
studio/studio/conversion/: __init__.py  converter.py
studio/studio/deploy/: __init__.py  deployer.py
studio/studio/extensions/: __init__.py  generator.py
studio/studio/generation/: __init__.py  generator.py
studio/studio/graph/: __init__.py  validator.py
studio/studio/ir/: __init__.py  models.py
studio/studio/manifest/: __init__.py  tracker.py
studio/studio/prompts/: __init__.py  generator.py
studio/studio/recommend/: __init__.py  archetypes.py  domain_cache.py  engine.py  llm_generator.py
studio/studio/routes/: __init__.py  condition_routes.py  team_routes.py  (+11 more)
studio/tests/: __init__.py  conftest.py  smoke_roundtrip.py  smoke_test.py  test_api.py  test_conditions.py  test_converter.py  test_extensions.py  test_generator.py  test_generator_loader_e2e.py  test_graph.py  test_ir_models.py  test_manifest.py  test_settings_key_safety.py  test_team_persistence.py  test_templates.py  test_validation.py
(+328 files in other folders)
