[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Generic agent orchestration & governance platform"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "python-multipart>=0.0.6",
    "uvicorn>=0.20",
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.5",
    "httpx>=0.27",
]
mcp = [
    "mcp>=1.0",
]
storage = [
    "boto3>=1.34",
    "google-auth>=2.0",
    "msal>=1.28",
]
testing = [
    "pytest>=7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
agent-orchestrator = "agent_orchestrator.cli.commands:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
